add persist